# SpikeAgent

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  restart-spikeagent-with-mounts.sh  run-spikeagent.sh
.github/workflows/: docker-cpu-publish.yml  docker-cpu.yml
docker_files/: Dockerfile.cpu
dockerfiles/: Dockerfile.cpu  Dockerfile.gpu
docs/: README.md  api-reference.md  installation.md  user-guide.md
notebook tutorials/: vlm_merge_simple_tutorial.ipynb  vlm_noise_rejection_tutorial.ipynb
src/spikeagent/: __init__.py  requirements-docker.txt  requirements.txt
src/spikeagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/spikeagent/app/: __init__.py  app.py  graph.py  main.py  prompt.txt
src/spikeagent/app/autorun_parameters/: m2.yaml
src/spikeagent/app/spikeinterface_api_docs/: merged_api.txt  sc_api.txt  scur_api.txt  se_api.txt  sqm_api.txt  ss_api.txt  sw_api.txt
src/spikeagent/app/st_utils/: comp_img.py  speech_to_text.py
src/spikeagent/app/tool/: __init__.py  document_tool.py  recording_new.py  sorting_new.py  start.py  think_and_review_tool.py  visualization_new.py
src/spikeagent/app/tool/si_custom/: __init__.py  custom_plot_deprecated.py
src/spikeagent/app/tool/si_custom_deprecated/: custom_plot_deprecated.py
src/spikeagent/app/tool/utils/: compute.py  custom_class.py  custom_class_gemini.py  llm_model.py  python_repl_tool.py  system_tools.py  testllm.ipynb
src/spikeagent/curation/: curation_new.py
src/spikeagent/curation/vlm_curation/: FLEXIBLE_METRICS_README.md  async_vlm.py  process_img.py  prompt_loader.py  run_vlm.py
src/spikeagent/curation/vlm_curation/prompts/: fewshot_instruction.txt  head.txt  metrics.txt  metrics_header.txt
src/spikeagent/curation/vlm_curation/prompts/metrics/: amplitude_cutoff.txt  isi_violations_ratio.txt  l_ratio.txt  nn_hit_rate.txt  nn_miss_rate.txt  presence_ratio.txt  snr.txt
src/spikeagent/curation/vlm_curation/prompts/modality/: amplitude_plot.txt  autocorr.txt  spike_locations.txt  waveform_multi.txt  waveform_single.txt
src/spikeagent/curation/vlm_merge/: FEWSHOT_INTEGRATION.md  HEAD_PROMPT_IMPROVEMENTS.md  PCA_CLUSTERING_INTEGRATION.md  WAVEFORM_PROMPT_IMPROVEMENTS.md  async_vlm.py  process_img.py  prompt_loader.py  run_vlm.py
src/spikeagent/curation/vlm_merge/prompts/: fewshot_instruction.txt  head.txt
src/spikeagent/curation/vlm_merge/prompts/modality/: amplitude_plot.txt  crosscorrelograms.txt  pca_clustering.txt  spike_locations.txt  waveform_multi.txt  waveform_single.txt
tests/: __init__.py  conftest.py
tests/curation/: README.md  __init__.py  test_curation.py  test_curation_simple.py
tutorials/: vlm_merge_simple_tutorial.ipynb  vlm_noise_rejection_tutorial.ipynb
