[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spikeagent"
version = "0.102.3"
description = "AI-powered assistant for spike sorting and neural data analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SpikeAgent Contributors"}
]
keywords = ["neuroscience", "spike-sorting", "ai", "electrophysiology", "neural-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    # --- Web app framework ---
    "streamlit>=1.43.2",
    "streamlit-audiorec>=0.1.3",
    "audio-recorder-streamlit>=0.0.8",
    "python-dotenv>=1.0.1",

    # --- LangChain agentic stack ---
    "langchain>=0.3.20",
    "langchain-core>=0.3.67",
    "langchain-anthropic>=0.3.10",
    "langchain-openai>=0.3.11",
    "langchain-google-genai>=2.1.1",
    "langchain-community>=0.3.19",
    "langchain-experimental>=0.3.4",
    "langgraph>=0.3.8",

    # --- LLM provider SDKs ---
    "anthropic>=0.49.0",
    "openai>=1.68.2",
    "google-ai-generativelanguage>=0.6.18",

    # --- Spike sorting & electrophysiology ---
    "spikeinterface[full]>=0.102.3",
    "probeinterface>=0.2.26",
    "kilosort>=4.0.21",
    "mountainsort5",
    # "herdingspikes>=0.4.6",  # fails to compile on macOS ARM; install separately on Linux/Docker

    # --- Scientific computing ---
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "scikit-learn>=1.6.1",
    "h5py>=3.13.0",
    "matplotlib>=3.10.1",

    # --- Utilities ---
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "tqdm>=4.67.1",
    "filetype>=1.2.0",
    "nest-asyncio",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/arnaumarin/SpikeAgent"
Documentation = "https://github.com/arnaumarin/SpikeAgent/tree/main/docs"
Repository = "https://github.com/arnaumarin/SpikeAgent"
Issues = "https://github.com/arnaumarin/SpikeAgent/issues"

[project.scripts]
spikeagent = "spikeagent.app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"spikeagent.app" = [
    "autorun_parameters/*.yaml",
    "prompt.txt",
    "style.css",
    "spikeinterface_api_docs/*.txt",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
